--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,7 @@ set(NS3_SRC
     src/rpc-client.cpp
     src/rpc-client-helper.cpp
     src/drl-node.cpp
+    src/trace.cpp
 )
 
 add_executable(testSpdlog tests/testSpdlog.cpp)
